public/page/globals/main.less
.nav li.copyright {
	position: absolute;
	bottom: 60px;
	left: 25px;
	color: #eee;
	font-size: 0.8em;
	font-family: "microsoft yahei";
	p {
		margin: 0;
	}

	a {
		color: inherit;
	}
}

.cg-notify-message {
	position:fixed;
	left:50%;
	top:-50px;
	z-index: 9999;
	max-width:400px;
	text-align: center;
	text-shadow: none;

	border:1px solid rgb(240, 195, 109);
	background-color: rgb(249, 237, 190);
	font-size: 13px;
	font-weight: bold;
	padding:2px 8px 2px 8px;

	-webkit-transition: top 0.5s ease-out,opacity 0.5s ease-out;
	-moz-transition: top 0.5s ease-out,opacity 0.5s ease-out;
	-o-transition: top 0.5s ease-out,opacity 0.5s ease-out;
	transition: top 0.5s ease-out,opacity 0.5s ease-out;
}

